--- a/robomaster/test_EP.ipynb
+++ b/robomaster/test_EP.ipynb
@@ -20,7 +20,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "data sent is b'robot ip 192.168.1.122' from ('192.168.1.122', 46465)\nCommand socket: ok\n"
+     "text": "data sent is b'robot ip 192.168.1.122' from ('192.168.1.122', 46284)\nCommand socket: ok\n"
     }
    ],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -37,24 +37,25 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "reply for chassis move z -90;: ok\n"
+     "text": "reply for chassis position ?;: -0.004 0.002 97.654 \n"
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'ok'"
+      "text/plain": "'-0.004 0.002 97.654 '"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 8
     }
    ],
    "source": [
-    "robot.rotate('-90')"
+    "# robot.rotate('90')\n",
+    "robot._sendcommand('chassis position ?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -70,7 +71,7 @@
       "text/plain": "'ok'"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 7
     }
    ],
    "source": [
@@ -83,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "reply for chassis move x .5 y 0;: 1 0 0 0 0 0 0 0 0 0 0 \nDONE\n"
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# robot.move('x 0 y 1')\n",
+    "def moveX(dist):\n",
+    "    initialX = float(robot._sendcommand('chassis position ?').split(' ')[0])\n",
+    "    currentX = initialX\n",
+    "    while (currentX - initialX < (abs(dist)-0.2)):\n",
+    "        currentX = float(robot._sendcommand('chassis position ?').split(' ')[0])\n",
+    "        robot._sendcommand('chassis speed x 0.2 y 0 z 0')\n",
+    "    # robot._sendcommand('chassis speed x -0.05 y 0 z 0')\n",
+    "    # waitToStill()\n",
+    "    robot._sendcommand('chassis speed x 0 y 0 z 0')\n",
     "def waitToStill():\n",
     "    time.sleep(0.5)\n",
     "    still = False\n",
@@ -106,12 +107,47 @@
     "            continue\n",
     "        elif int(state[0]) == 1:\n",
     "            still = True\n",
-    "    return\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for chassis move x -0.3 y 0 vxy 0.1;: ok\nDONE\n"
+    }
+   ],
+   "source": [
+    "robot.move('x -0.3 y 0 vxy 0.1')\n",
     "\n",
-    "robot.move('x .5 y 0')\n",
+    "\n",
+    "# moveX(.5)\n",
     "waitToStill()\n",
     "print('DONE')\n",
     "# robot.rotate('-90')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Exiting...\n\treply for chassis move x 0;: ok\n\treply for gimbal speed p 0 y 0;: ok\n\treply for robotic_arm stop;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\n\treply for stream off;: ok\n\treply for quit;: ok\nAll done\n"
+    }
+   ],
+   "source": [
+    "robot.exit()"
    ]
   },
   {
@@ -148,21 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'robot' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-d79f8e63ca39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrobot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'robot' is not defined"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Exiting...\n\treply for chassis move x 0;: ok\n\treply for gimbal speed p 0 y 0;: ok\n\treply for robotic_arm stop;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\n\treply for stream off;: ok\n\treply for quit;: ok\nAll done\n"
     }
    ],
    "source": [
