--- a/CV/Raphury/OpenCV-Yolo.ipynb
+++ b/CV/Raphury/OpenCV-Yolo.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -334,22 +334,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[INFO] loading model...\n[INFO] starting video stream...\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-bc70177b20e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    139\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    140\u001b[0m     \u001b[1;31m# Remove the bounding boxes with low confidence\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 141\u001b[1;33m     \u001b[0mpostprocess\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mouts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    142\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    143\u001b[0m     \u001b[1;31m# Put efficiency information. The function getPerfProfile returns the\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-1-bc70177b20e0>\u001b[0m in \u001b[0;36mpostprocess\u001b[1;34m(frame, outs)\u001b[0m\n\u001b[0;32m     79\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mdetection\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m             \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdetection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m             \u001b[0mclassId\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m             \u001b[0mconfidence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscores\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mclassId\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mconfidence\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mconfThreshold\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36margmax\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\TIL-2020-oa6RrwB_\\lib\\site-packages\\numpy\\core\\fromnumeric.py\u001b[0m in \u001b[0;36margmax\u001b[1;34m(a, axis, out)\u001b[0m\n\u001b[0;32m   1186\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1187\u001b[0m     \"\"\"\n\u001b[1;32m-> 1188\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_wrapfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'argmax'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1189\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\TIL-2020-oa6RrwB_\\lib\\site-packages\\numpy\\core\\fromnumeric.py\u001b[0m in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mbound\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m         \u001b[1;31m# A TypeError occurs if the object does have such a method in its\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "text": "[INFO] loading model...\n[INFO] starting video stream...\n0.47334367\n0.27254945\n0.47334367\n0.27254945\n0.47334367\n0.27254945\n0.3921581\n0.3921581\n0.3921581\nDone processing !!!\nOutput file is stored as  TIL_vidtest_yolo_out_py_30timesfaster.avi\n"
     }
    ],
    "source": [
@@ -364,7 +349,7 @@
     "import cv2 \n",
     "\n",
     "# Initialize the parameters\n",
-    "confThreshold = 0.5  #Confidence threshold\n",
+    "confThreshold = 0.1  #Confidence threshold\n",
     "nmsThreshold = 0.4   #Non-maximum suppression threshold\n",
     "inpWidth = 416       #Width of network's input image\n",
     "inpHeight = 416      #Height of network's input image\n",
@@ -380,11 +365,11 @@
     "\n",
     "path = \"C:\\\\Users\\\\Raphael\\\\Documents\\\\TIL_yolo_model\\\\\"\n",
     "classesFile = path+\"modanet.names\"\n",
-    "CLASSES = None\n",
+    "classes = None\n",
     "with open(classesFile, 'rt') as f:\n",
-    "    CLASSES = f.read().rstrip('\\n').split('\\n')\n",
+    "    classes = f.read().rstrip('\\n').split('\\n')\n",
     "\n",
-    "outputFile = 'TIL_vidtest_yolo_out_py.avi'\n",
+    "outputFile = 'TIL_vidtest_yolo_out_py_notsofast.avi'\n",
     "\n",
     "\n",
     "# Get the video writer initialized to save the output video\n",
@@ -399,7 +384,7 @@
     "net.setPreferableBackend(cv2.dnn.DNN_BACKEND_OPENCV)\n",
     "net.setPreferableTarget(cv2.dnn.DNN_TARGET_CPU)\n",
     "\n",
-    "COLORS = np.random.uniform(0, 255, size=(len(CLASSES), 3))\n",
+    "COLORS = np.random.uniform(0, 255, size=(len(classes), 3))\n",
     "\n",
     "# load our serialized model from disk\n",
     "print(\"[INFO] loading model...\")\n",
@@ -409,6 +394,23 @@
     "print(\"[INFO] starting video stream...\")\n",
     "#cap = VideoStream(src=0).start()\n",
     "cap = cv2.VideoCapture('TIL_vidtest.mp4')\n",
+    "\n",
+    "# Draw the predicted bounding box\n",
+    "def drawPred(classId, conf, left, top, right, bottom):\n",
+    "    # Draw a bounding box.\n",
+    "    cv2.rectangle(frame, (left, top), (right, bottom), (0, 0, 255))\n",
+    "\n",
+    "    label = '%.2f' % conf\n",
+    "\n",
+    "    # Get the label for the class name and its confidence\n",
+    "    if classes:\n",
+    "        assert(classId < len(classes))\n",
+    "        label = '%s:%s' % (classes[classId], label)\n",
+    "\n",
+    "        #Display the label at the top of the bounding box\n",
+    "        labelSize, baseLine = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.5, 1)\n",
+    "        top = max(top, labelSize[1])\n",
+    "        cv2.putText(frame, label, (left, top), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255))\n",
     "\n",
     "# Get the names of the output layers\n",
     "def getOutputsNames(net):\n",
@@ -435,7 +437,9 @@
     "            scores = detection[5:]\n",
     "            classId = np.argmax(scores)\n",
     "            confidence = scores[classId]\n",
+    "            \n",
     "            if confidence > confThreshold:\n",
+    "                print(confidence)\n",
     "                center_x = int(detection[0] * frameWidth)\n",
     "                center_y = int(detection[1] * frameHeight)\n",
     "                width = int(detection[2] * frameWidth)\n",
@@ -445,7 +449,7 @@
     "                classIds.append(classId)\n",
     "                confidences.append(float(confidence))\n",
     "                boxes.append([left, top, width, height])\n",
-    "\n",
+    "                \n",
     "    # Perform non maximum suppression to eliminate redundant overlapping boxes with\n",
     "    # lower confidences.\n",
     "    indices = cv2.dnn.NMSBoxes(boxes, confidences, confThreshold, nmsThreshold)\n",
@@ -470,41 +474,45 @@
     "    # esc to close stream\n",
     "    if cv2.waitKey(16) == 27:\n",
     "        break\n",
-    "\n",
+    "counter = 0\n",
     "while cv2.waitKey(1) < 0:\n",
-    "\n",
-    "    # get frame from the video\n",
-    "    hasFrame, frame = cap.read()\n",
+    "    if counter % 20 == 0:\n",
     "    \n",
-    "    # Stop the program if reached end of video\n",
-    "    if not hasFrame:\n",
-    "        print(\"Done processing !!!\")\n",
-    "        print(\"Output file is stored as \", outputFile)\n",
-    "        cv2.waitKey(3000)\n",
-    "        break\n",
+    "    # get frame from the video\n",
+    "        hasFrame, frame = cap.read()\n",
+    "    \n",
+    "        # Stop the program if reached end of video\n",
+    "        if not hasFrame:\n",
+    "            print(\"Done processing !!!\")\n",
+    "            print(\"Output file is stored as \", outputFile)\n",
+    "            cv2.waitKey(3000)\n",
+    "            break\n",
     "\n",
-    "    # Create a 4D blob from a frame.\n",
-    "    blob = cv2.dnn.blobFromImage(frame, 1/255, (inpWidth, inpHeight), [0,0,0], 1, crop=False)\n",
-    "    print(\"blob created\")\n",
-    "    # Sets the input to the network\n",
-    "    net.setInput(blob)\n",
+    "        # Create a 4D blob from a frame.\n",
+    "        blob = cv2.dnn.blobFromImage(frame, 1/255, (inpWidth, inpHeight), [0,0,0], 1, crop=False)\n",
+    "        # print(\"blob created\")\n",
+    "        # Sets the input to the network\n",
+    "        net.setInput(blob)\n",
     "\n",
-    "    # Runs the forward pass to get output of the output layers\n",
-    "    outs = net.forward(getOutputsNames(net))\n",
-    "    print(\"reaching post process\")\n",
-    "    # Remove the bounding boxes with low confidence\n",
-    "    postprocess(frame, outs)\n",
+    "        # Runs the forward pass to get output of the output layers\n",
+    "        outs = net.forward(getOutputsNames(net))\n",
+    "        # print(\"reaching post process\")\n",
+    "        # Remove the bounding boxes with low confidence\n",
+    "        postprocess(frame, outs)\n",
     "\n",
-    "    # Put efficiency information. The function getPerfProfile returns the\n",
-    "    # overall time for inference(t) and the timings for each of the layers(in layersTimes)\n",
-    "    t, _ = net.getPerfProfile()\n",
-    "    label = 'Inference time: %.2f ms' % (t * 1000.0 / cv2.getTickFrequency())\n",
-    "    cv2.putText(frame, label, (0, 15), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255))\n",
+    "        # Put efficiency information. The function getPerfProfile returns the\n",
+    "        # overall time for inference(t) and the timings for each of the layers(in layersTimes)\n",
+    "        t, _ = net.getPerfProfile()\n",
+    "        label = 'Inference time: %.2f ms' % (t * 1000.0 / cv2.getTickFrequency())\n",
+    "        cv2.putText(frame, label, (0, 15), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255))\n",
     "\n",
-    "    # Write the frame with the detection boxes\n",
-    " \n",
-    "    vid_writer.write(frame.astype(np.uint8))\n",
-    "\n",
+    "        # Write the frame with the detection boxes\n",
+    "    \n",
+    "        vid_writer.write(frame.astype(np.uint8))\n",
+    "        counter += 1\n",
+    "    else:\n",
+    "        hasFrame = cap.grab()\n",
+    "        counter += 1\n",
     "\n",
     "#     #show the output frame\n",
     "#     cv2.imshow(\"Frame\", frame)\n",
