--- a/robomaster/EPS&R.ipynb
+++ b/robomaster/EPS&R.ipynb
@@ -2,8 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "data sent is b'robot ip 192.168.31.201' from ('192.168.31.201', 52002)\nCommand socket: ok\n"
+    }
+   ],
+   "source": [
+    "from EP_api import Robot, findrobotIP\n",
+    "\n",
+    "robot = Robot(findrobotIP())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -20,9 +41,9 @@
     "\n",
     "# modanet params\n",
     "yolo_modanet_params = {\n",
-    "    \"model_def\": \"/home/rohit/Documents/Computer Science/Hackathons/DSTA TIL/yolov3-modanet.cfg\",\n",
-    "    \"weights_path\": \"/home/rohit/Documents/Computer Science/Hackathons/DSTA TIL/yolov3-modanet_last.weights\", # using modanet pretrained weights\n",
-    "    \"class_path\":\"/home/rohit/Documents/Computer Science/Hackathons/DSTA TIL/modanet.names\", # using modanet classes\n",
+    "    \"model_def\": \"yolo/yolov3-modanet.cfg\",\n",
+    "    \"weights_path\": \"yolo/yolov3-modanet_last.weights\", # using modanet pretrained weights\n",
+    "    \"class_path\":\"yolo/modanet.names\", # using modanet classes\n",
     "    \"conf_thres\": 0.1,\n",
     "    \"nms_thres\":0.4,\n",
     "    \"img_size\": 416,\n",
@@ -32,11 +53,11 @@
     "colors = np.array([plt.get_cmap(\"rainbow\")(i) for i in np.linspace(0, 1, 13)])\n",
     "\n",
     "classes = None\n",
-    "classesFile = \"/home/rohit/Documents/Computer Science/Hackathons/DSTA TIL/modanet.names\"\n",
+    "classesFile = \"yolo/modanet.names\"\n",
     "with open(classesFile, 'rt') as f:\n",
     "    classes = f.read().rstrip('\\n').split('\\n')\n",
     "\n",
-    "def predict_frame(frame):\n",
+    "def  predict_frame(frame):\n",
     "    res = { \"detect\": 0, \"dist\": None, \"class\": None }\n",
     "    mapping = { 8:1, 7:2, 4:3, 5:4, 10:5 }\n",
     "    \n",
@@ -59,77 +80,96 @@
     "\n",
     "    return res\n",
     "\n",
-    "cv2.namedWindow('fk this shit', cv2.WINDOW_NORMAL)\n",
-    "cap = cv2.VideoCapture('TIL_vidtest.mp4')\n",
+    "# cv2.namedWindow('fk this shit', cv2.WINDOW_NORMAL)\n",
+    "# cap = cv2.VideoCapture('TIL_vidtest.mp4')\n",
     "\n",
-    "while not cap.isOpened():\n",
-    "    cap = cv2.VideoCapture('TIL_vidtest.mp4')\n",
-    "    print(\"loading video...\")\n",
-    "    # esc to close stream\n",
-    "    if cv2.waitKey(16) == 27:\n",
-    "        break\n",
+    "# while not cap.isOpened():\n",
+    "#     cap = cv2.VideoCapture('TIL_vidtest.mp4')\n",
+    "#     print(\"loading video...\")\n",
+    "#     # esc to close stream\n",
+    "#     if cv2.waitKey(16) == 27:\n",
+    "#         break\n",
     "\n",
-    "cnt = 0\n",
-    "while cap.isOpened():\n",
+    "# cnt = 0\n",
+    "# while cap.isOpened():\n",
     "\n",
-    "    # get frame from the video\n",
-    "    hasFrame, frame = cap.read()\n",
+    "#     # get frame from the video\n",
+    "#     hasFrame, frame = cap.read()\n",
     "\n",
-    "    # q to quit\n",
-    "    if cv2.waitKey(16) == ord(\"q\"):\n",
-    "        break\n",
+    "#     # q to quit\n",
+    "#     if cv2.waitKey(16) == ord(\"q\"):\n",
+    "#         break\n",
     "\n",
-    "    print(cnt)\n",
-    "    if cnt < 200 or cnt % 30:\n",
-    "        cnt += 1\n",
-    "        continue\n",
-    "    cnt += 1\n",
+    "#     print(cnt)\n",
+    "#     if cnt < 200 or cnt % 30:\n",
+    "#         cnt += 1\n",
+    "#         continue\n",
+    "#     cnt += 1\n",
     "\n",
-    "    # stop the program if reached end of video\n",
-    "    if not hasFrame: break\n",
+    "#     # stop the program if reached end of video\n",
+    "#     if not hasFrame: break\n",
     "\n",
-    "    detections = YOLOv3Predictor(params=yolo_modanet_params).get_detections(frame)\n",
-    "    for x1, y1, x2, y2, cls_conf, cls_pred in detections:\n",
-    "        if int(cls_pred) not in [4,5,7,8,10]: continue\n",
+    "#     detections = YOLOv3Predictor(params=yolo_modanet_params).get_detections(frame)\n",
+    "#     for x1, y1, x2, y2, cls_conf, cls_pred in detections:\n",
+    "#         if int(cls_pred) not in [4,5,7,8,10]: continue\n",
     "\n",
-    "        x1, y1, x2, y2 = int(x1), int(y1), int(x2), int(y2)\n",
-    "        height, width, channels = frame.shape\n",
+    "#         x1, y1, x2, y2 = int(x1), int(y1), int(x2), int(y2)\n",
+    "#         height, width, channels = frame.shape\n",
     "\n",
-    "        centre = (width // 2, height // 2)\n",
-    "        centre_bb = ((x1 + x2) // 2, (y1 + y2) // 2)\n",
+    "#         centre = (width // 2, height // 2)\n",
+    "#         centre_bb = ((x1 + x2) // 2, (y1 + y2) // 2)\n",
     "\n",
-    "        print('Dist from centre:')\n",
-    "        print(((x1 + x2) / 2) - (width / 2))\n",
+    "#         print('Dist from centre:')\n",
+    "#         print(((x1 + x2) / 2) - (width / 2))\n",
     "\n",
-    "        print(\"\\t+ Label: %s, Conf: %.5f\" % (classes[int(cls_pred)], cls_conf))       \n",
+    "#         print(\"\\t+ Label: %s, Conf: %.5f\" % (classes[int(cls_pred)], cls_conf))       \n",
     "\n",
-    "        color = colors[int(cls_pred)]\n",
-    "        color = tuple(c*255 for c in color)\n",
-    "        color = (.7*color[2],.7*color[1],.7*color[0])       \n",
-    "        font = cv2.FONT_HERSHEY_SIMPLEX   \n",
-    "        text =  \"%s conf: %.3f\" % (classes[int(cls_pred)] ,cls_conf)\n",
-    "        cv2.rectangle(frame,(x1,y1) , (x2,y2) , color,3)\n",
-    "        y1 = 0 if y1<0 else y1\n",
-    "        y1_rect = y1-25\n",
-    "        y1_text = y1-5\n",
-    "        if y1_rect<0:\n",
-    "            y1_rect = y1+27\n",
-    "            y1_text = y1+20\n",
-    "        cv2.rectangle(frame,(x1-2,y1_rect) , (x1 + int(8.5*len(text)),y1) , color,-1)\n",
+    "#         color = colors[int(cls_pred)]\n",
+    "#         color = tuple(c*255 for c in color)\n",
+    "#         color = (.7*color[2],.7*color[1],.7*color[0])       \n",
+    "#         font = cv2.FONT_HERSHEY_SIMPLEX   \n",
+    "#         text =  \"%s conf: %.3f\" % (classes[int(cls_pred)] ,cls_conf)\n",
+    "#         cv2.rectangle(frame,(x1,y1) , (x2,y2) , color,3)\n",
+    "#         y1 = 0 if y1<0 else y1\n",
+    "#         y1_rect = y1-25\n",
+    "#         y1_text = y1-5\n",
+    "#         if y1_rect<0:\n",
+    "#             y1_rect = y1+27\n",
+    "#             y1_text = y1+20\n",
+    "#         cv2.rectangle(frame,(x1-2,y1_rect) , (x1 + int(8.5*len(text)),y1) , color,-1)\n",
     "\n",
-    "    # Write the frame with the detection boxes\n",
-    "    cv2.imshow('fk this shit', frame)"
+    "#     # Write the frame with the detection boxes\n",
+    "#     cv2.imshow('fk this shit', frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for stream on;: ok\nvideothread started!\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'search_loop' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-9f25799a9231>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp_frame\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# RAPHAEL'S FUNCTION GOES HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msearch_completed\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0msearch_completed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msearch_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mpickup_completed\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# pickup_completed = pickup_loop(result)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'search_loop' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from EP_api import Robot, findrobotIP\n",
     "\n",
-    "robot = Robot(findrobotIP)\n",
+    "# robot = Robot(findrobotIP)\n",
     "\n",
     "\n",
     "robot.startvideo()\n",
@@ -143,15 +183,16 @@
     "    tmp_frame = robot.frame\n",
     "    cv2.imshow('Live video', tmp_frame) # access the video feed by robot.frame\n",
     "    result = predict_frame(tmp_frame) # RAPHAEL'S FUNCTION GOES HERE\n",
-    "    if search_completed is False:\n",
-    "        search_completed = search_loop(result)\n",
-    "    elif pickup_completed is False:\n",
-    "        # pickup_completed = pickup_loop(result)\n",
-    "        robot.exit()\n",
-    "        break\n",
-    "    else:\n",
-    "        robot.exit()\n",
-    "        break\n",
+    "    print(result)\n",
+    "    # if search_completed is False:\n",
+    "    #     search_completed = search_loop(result)\n",
+    "    # elif pickup_completed is False:\n",
+    "    #     # pickup_completed = pickup_loop(result)\n",
+    "    #     robot.exit()\n",
+    "    #     break\n",
+    "    # else:\n",
+    "    #     robot.exit()\n",
+    "    #     break\n",
     "\n",
     "    k = cv2.waitKey(16) & 0xFF\n",
     "    if k == 27: # press esc to stop\n",
@@ -159,6 +200,13 @@
     "        robot.exit()\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -172,9 +220,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.9-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python36964bitdevenvvirtualenva787c48c9441424795e23263ea65b06d",
+   "display_name": "Python 3.6.9 64-bit ('dev_env': virtualenv)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
